update api endpoints

update api docs


fix: ci


refactor tests


update sdk


update sdk


refactor: api docs and sdk


fix: api docs'


update sdk and docs


update groups sdk and docs


feeat(groups): add groups sdk tests


feat(sdk): tests


fix: sdk tests


feat(users): add api tests


fix(api tests): add missing tests


fix: users api tests


fix: ci
