# things/api/http/channels.go
@@ -131,42 +131,28 @@ func groupsHandler(svc groups.Service, r *chi.Mux, logger *slog.Logger) http.Han
 			api.EncodeResponse,
 			opts...,
 		), "disconnect_channel_thing").ServeHTTP)
+
+		r.Get("/things/{memberID}", otelhttp.NewHandler(kithttp.NewServer(
+			gapi.ListGroupsEndpoint(svc, "things"),
+			gapi.DecodeListGroupsRequest,
+			api.EncodeResponse,
+			opts...,
+		), "list_channel_by_thing_id").ServeHTTP)
+
+		r.Get("/users/{memberID}", otelhttp.NewHandler(kithttp.NewServer(
+			gapi.ListGroupsEndpoint(svc, "users"),
+			gapi.DecodeListGroupsRequest,
+			api.EncodeResponse,
+			opts...,
+		), "list_channel_by_user_id").ServeHTTP)
+
+		r.Get("/groups/{memberID}", otelhttp.NewHandler(kithttp.NewServer(
+			gapi.ListGroupsEndpoint(svc, "groups"),
+			gapi.DecodeListGroupsRequest,
+			api.EncodeResponse,
+			opts...,
+		), "list_channel_by_user_group_id").ServeHTTP)
 	})
-
-	// Ideal location: things service,  things endpoint
-	// Reason for placing here :
-	// SpiceDB provides list of channel ids to which thing id attached
-	// and channel service can access spiceDB and get this channel ids list with given thing id.
-	// Request to get list of channels to which thingID ({memberID}) belongs
-	r.Get("/things/{memberID}/channels", otelhttp.NewHandler(kithttp.NewServer(
-		gapi.ListGroupsEndpoint(svc, "things"),
-		gapi.DecodeListGroupsRequest,
-		api.EncodeResponse,
-		opts...,
-	), "list_channel_by_thing_id").ServeHTTP)
-
-	// Ideal location: users service, users endpoint
-	// Reason for placing here :
-	// SpiceDB provides list of channel ids attached to given user id
-	// and channel service can access spiceDB and get this user ids list with given thing id.
-	// Request to get list of channels to which userID ({memberID}) have permission.
-	r.Get("/users/{memberID}/channels", otelhttp.NewHandler(kithttp.NewServer(
-		gapi.ListGroupsEndpoint(svc, "users"),
-		gapi.DecodeListGroupsRequest,
-		api.EncodeResponse,
-		opts...,
-	), "list_channel_by_user_id").ServeHTTP)
-
-	// Ideal location: users service, groups endpoint
-	// SpiceDB provides list of channel ids attached to given user_group id
-	// and channel service can access spiceDB and get this user ids list with given user_group id.
-	// Request to get list of channels to which user_group_id ({memberID}) attached.
-	r.Get("/groups/{memberID}/channels", otelhttp.NewHandler(kithttp.NewServer(
-		gapi.ListGroupsEndpoint(svc, "groups"),
-		gapi.DecodeListGroupsRequest,
-		api.EncodeResponse,
-		opts...,
-	), "list_channel_by_user_group_id").ServeHTTP)
 
 	// Connect channel and thing
 	r.Post("/connect", otelhttp.NewHandler(kithttp.NewServer(
